--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.74.5",
     "react-native-gifted-chat": "^2.4.1",
     "react-native-maps": "1.14.0",
+    "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0"
